String and CSS changes to fix hero scroll animation positioning overlap on mobile

--- a/css/portfolio2.css
+++ b/css/portfolio2.css
@@ -36,7 +36,7 @@
 
 @media (min-width: 576px) {
     .container {
-        max-width: 375px;
+        max-width: 576px;
     }
 }
 
@@ -196,7 +196,7 @@ a:hover{
     height: 60px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 60px;
+    margin-bottom: 30px;
 }
 
 .mouse {
